# flask-auth-template

./: README.md  app.py  create_secret_key.py  init_db.py  pyproject.toml
instance/: database.db
static/: style.css
templates/: index.html  login.html  register.html
